# file_watch_issue_investigation

./: README.md  SUMMARY.md  conftest.py  file_watch_diagnostics_20250308_024748.json  file_watch_diagnostics_cli.py  pyproject.toml  pytest.ini  quick_check.py  requirements.txt
examples/: basic_usage.py  issue_detector.py
file_watch_diagnostics/: __init__.py  diagnostics.py
file_watch_diagnostics/cli/: __init__.py  diagnostics.py  quick_check.py
file_watch_diagnostics/utils/: __init__.py  event_monitor.py  logging_utils.py  system_limits.py  watch_test.py
tests/: test_cli_diagnostics.py  test_cli_quick_check.py  test_diagnostics.py  test_event_monitor.py  test_logging_utils.py  test_quick_check.py  test_system_limits.py  test_utils_init.py  test_watch_test.py
tests/integration/: conftest.py  test_diagnostics_workflow.py  test_event_monitoring.py  test_quick_check.py  test_system_limits.py
