[tool.poetry]
name = "file-watch-diagnostics"
version = "0.1.0"
description = "A comprehensive toolkit for diagnosing and troubleshooting file watching issues in Linux environments"
authors = ["Your Name <your.email@example.com>"]
readme = "README.md"
packages = [{include = "file_watch_diagnostics"}]
license = "MIT"
repository = "https://github.com/tom-doerr/file_watch_issue_investigation"
keywords = ["file-watching", "inotify", "linux", "diagnostics", "troubleshooting"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Environment :: Console",
    "Intended Audience :: Developers",
    "Intended Audience :: System Administrators",
    "Operating System :: POSIX :: Linux",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.6",
    "Programming Language :: Python :: 3.7",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Topic :: System :: Monitoring",
    "Topic :: System :: Systems Administration",
    "Topic :: Utilities",
]

[tool.poetry.dependencies]
python = "^3.6"
watchdog = "^3.0.0"
psutil = "^5.9.5"
pyinotify = "^0.9.6"
rich = "^13.4.2"

[tool.poetry.group.dev.dependencies]
pytest = "^8.0.0"
pytest-mock = "^3.10.0"
black = "^23.1.0"
isort = "^5.12.0"
flake8 = "^6.0.0"

[tool.poetry.scripts]
quick-check = "file_watch_diagnostics.cli.quick_check:main"
file-watch-diagnostics = "file_watch_diagnostics.cli.diagnostics:main"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.black]
line-length = 88
target-version = ["py36"]

[tool.isort]
profile = "black"
line_length = 88
